# cookiecutter-python-template

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: .gitattributes  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
{{ cookiecutter.project_name }}/.github/workflows/: ci.yaml
{{ cookiecutter.project_name }}/src/: __init__.py  main.py
{{ cookiecutter.project_name }}/src/config/: __init__.py  logs.py  settings.py
{{ cookiecutter.project_name }}/src/io/: __init__.py  base.py
